moved from static to spring